2008-12-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Update to use current FSF autotools versions.
	* libtiff/tiffio.h: GCC will now validate format specifications
	for TIFFError(), TIFFErrorExt(), TIFFWarning(), and
	TIFFWarningExt() in order to reveal bugs.  Cleaned up resulting
	warnings throughout for 32 bit build only.

2008-12-31  Frank Warmerdam  <warmerdam@pobox.com>

	* tools/tiffcrop.c, man/tiffcrop.1: A major update from Richard
	Nolde.  

2008-12-21  Frank Warmerdam  <warmerdam@pobox.com>

	* libtiff/tif_jpeg.c: Avoid errors if the application writes a full
	strip for the last partial strip in a jpeg compressed file.
	http://bugzilla.maptools.org/show_bug.cgi?id=1981

2008-12-21  Frank Warmerdam  <warmerdam@pobox.com>

	* libtiff/tif_getimage.c, tiffio.h: More ABI corrections. 
	Removed SubsamplingHor/Ver from TIFFRGBAImage structure.
	  http://bugzilla.maptools.org/show_bug.cgi?id=1980

2008-12-18  Frank Warmerdam  <warmerdam@pobox.com>

	* libtiff/tif_getimage.c,tiffio.h: removed all use of UaToAa and
	Bitmap16to8 arrays in TIFFRGBAImage structure to restore ABI
	compatability.  These were just an attempt to speed up processing
	with precalculated tables.
	  http://bugzilla.maptools.org/show_bug.cgi?id=1979

	* libtiff/tif_codec.c: Avoid printing c->name if it does not exist.

2008-10-21  Andrey Kiselev  <dron@ak4719.spb.edu>

	* libtiff/tif_jbig.c: Support the JBIG-KIT 2.0 (compatibility with
	the older versions retained).

2008-09-05  Andrey Kiselev  <dron@ak4719.spb.edu>

	* tools/tiffsplit.c: Use dynamically allocated array instead of static
	when constructing output file names.

2008-09-03  Andrey Kiselev  <dron@ak4719.spb.edu>

	* tools/tiffsplit.c: Get rid of unsafe strcpy()/strcat() calls when
	doing the filename/path construction.

	* tools/tiff2pdf.c: More appropriate format string in
	t2p_write_pdf_string(); avoid signed/unsigned mismatch.

	* libtiff/tif_lzw.c: Properly zero out the codetable. As per bug
