@@ -1,4 +1,4 @@
-/* $Id: strip.c,v 1.3 2006-03-23 14:54:02 dron Exp $ */
+/* $Id: strip.c,v 1.3.2.1 2009-01-01 17:52:51 bfriesen Exp $ */
 
 /*
  * Copyright (c) 2004, Andrey Kiselev  <dron@ak4719.spb.edu>
@@ -171,7 +171,7 @@ failure:
 	TIFFClose(tif);
 openfailure:
 	fprintf (stderr, "Can't create test TIFF file %s:\n"
-"    ImageWidth=%ld, ImageLength=%ld, RowsPerStrip=%ld, Compression=%d,\n"
+"    ImageWidth=%u, ImageLength=%u, RowsPerStrip=%u, Compression=%d,\n"
 "    BitsPerSample=%d, SamplesPerPixel=%d, SampleFormat=%d,\n"
 "    PlanarConfiguration=%d, PhotometricInterpretation=%d.\n",
 		 name, width, length, rowsperstrip, compression,
@@ -249,7 +249,7 @@ failure:
 	TIFFClose(tif);
 openfailure:
 	fprintf (stderr, "Can't read test TIFF file %s:\n"
-"    ImageWidth=%ld, ImageLength=%ld, RowsPerStrip=%ld, Compression=%d,\n"
+"    ImageWidth=%u, ImageLength=%u, RowsPerStrip=%u, Compression=%d,\n"
 "    BitsPerSample=%d, SamplesPerPixel=%d, SampleFormat=%d,\n"
 "    PlanarConfiguration=%d, PhotometricInterpretation=%d.\n",
 		 name, width, length, rowsperstrip, compression,
@@ -263,6 +263,8 @@ write_scanlines(TIFF *tif, const tdata_t array, const tsize_t size)
 {
 	uint32		length, row;
 	tsize_t		scanlinesize, offset;
+
+	(void) size;
 
 	if (!TIFFGetField(tif, TIFFTAG_IMAGELENGTH, &length)) {
 		fprintf (stderr, "Can't get tag %d.\n", TIFFTAG_IMAGELENGTH);
@@ -278,7 +280,7 @@ write_scanlines(TIFF *tif, const tdata_t array, const tsize_t size)
 	for (offset = 0, row = 0; row < length; offset+=scanlinesize, row++) {
 		if (TIFFWriteScanline(tif, (char *)array + offset, row, 0) < 0) {
 			fprintf (stderr,
-				 "Can't write image data at row %lu.\n", row);
+				 "Can't write image data at row %u.\n", row);
 			return -1;
 		}
         }
